--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
-    "babel-polyfill": "^6.26.0",
-    "draft-js": "^0.11.7",
-    "draftjs-to-html": "^0.9.1",
+    "@tinymce/tinymce-react": "^3.13.1",
     "firebase": "^9.6.7",
     "react": "^17.0.2",
+    "react-ace": "^9.5.0",
     "react-dom": "^17.0.2",
-    "react-draft-wysiwyg": "^1.14.7",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
